会员中心账户信息

--- a/nainaiwang/static/css/base.css
+++ b/nainaiwang/static/css/base.css
@@ -1,160 +1,66 @@
 body {
-  font-family: 微软雅黑;
+    font-family: 微软雅黑;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .float-l {
-  float: left;
+    float: left;
 }
 
 .float-r {
-  float: right;
+    float: right;
 }
 
 .float-clear:after {
-  content: "";
-  width: 0;
-  display: block;
-  clear: both;
-  overflow: hidden;
+    content: "";
+    width: 0;
+    display: block;
+    clear: both;
+    overflow: hidden;
 }
 
 .float-clear {
-  zoom: 1;
+    zoom: 1;
 }
 
 ul {
-  list-style: none;
-  margin: 0;
+    list-style: none;
+    margin: 0;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 input.default {
-  width: 252px;
-  height: 37px;
-  border: 1px solid #ccc;
-  padding: 0 6px;
-  color: #777;
-  outline: none;
-  background-color: #fff;
+    width: 252px;
+    height: 37px;
+    border: 1px solid #ccc;
+    padding: 0 6px;
+    color: #777;
+    background-color: #fff;
+    font-size: 13px;
 }
 
 button.default {
-  width: 120px;
-  height: 35px;
-  line-height: 35px;
-  background-color: #d61515;
-  border: none;
-  outline: none;
-  color: #fff;
-  font-size: 16px;
+    width: 120px;
+    height: 35px;
+    line-height: 35px;
+    background-color: #d61515;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 200px;
 }
 
-.user-main-left{
-  width: 200px;
-  min-height: 450px;
-  border: 1px solid #c0c0c0;
-}
-
-.user-main-right{
-  width: 966px;
-  border: 1px solid #c0c0c0;
-  margin-left: 20px;
-}
-
-.user-main-right p.title{
-  height: 35px;
-  line-height: 35px;
-  margin: 0 5px;
-  border-bottom: 1px solid #EC2F2F;
-  font-size: 16px;
-  padding-left: 10px;
-  color: rgb(119,119,119);
-}
-
-.user-main-left>h3{
-  width: 100%;
-  height: 49px;
-  line-height: 49px;
-  background-color: #D61515;
-  color: #fff;
-  font-size: 16px;
-  text-align: center;
-  font-weight: normal;
-  border-bottom: 1px solid #c0c0c0;
-}
-
-.user-main-left li{
-  font-size: 14px;
-}
-
-.user-main-left li a{
-  display: block;
-  height: 40px;
-  line-height: 40px;
-  color: #666;
-  border-bottom: 1px solid #c0c0c0;
-  text-decoration: none;
-}
-
-.user-main-left li a:hover{
-  color: #E20E22;
-}
-
-.user-main-left li a:hover span.down{
-  border-top-color: #E20E22;
-}
-
-.user-main-left li a:hover span.right{
-  border-left-color: #E20E22;
-}
-
-.user-main-left .first-title{
-  padding-left: 45px;
-}
-
-.user-main-left .first-title:hover{
-  background-color: #eee;
-}
-
-.user-main-left .second-list a{
-  padding-left: 50px;
-  font-size: 12px;
-}
-
-.user-main-left .first-title span.down {
-  display: inline-block;
-  position: relative;
-  top: 2px;
-  left: 4px;
-  width: 0;
-  border: 4px solid transparent;
-  border-top-color: #666;
-}
-
-.user-main-left .first-title span.right {
-  display: inline-block;
-  position: relative;
-  top: 0;
-  left: 6px;
-  width: 0;
-  border: 4px solid transparent;
-  border-left-color: #666;
-}
-
-.user-main-left .router-link-active{
-  color: #E20E22;
-  font-weight: 600;
-}
