会员中心，资金管理，账户信息，等

--- a/nainaiwang/static/css/base.css
+++ b/nainaiwang/static/css/base.css
@@ -41,7 +41,7 @@ a:hover {
     text-decoration: underline;
 }
 
-input.default {
+input.default, select.default {
     width: 252px;
     height: 37px;
     border: 1px solid #ccc;
